--- a/styles.css
+++ b/styles.css
@@ -102,38 +102,22 @@ header nav ul li a:hover {
 }
 
 /* Main Content for Commercial and Residential Sales and All Your Needs Covered */
-.Commercial-Residential-Sales-and-All-Your-Needs {
+.Commercial-Residenntial-Sales-and-All-Your-Needs
+.text{
+    flex: 2;
+img{
+    width: 100%
+    max-width: 400%
+    object-fit: cover;
+    vertical-align: middle}
+.wrapper{
+    padding: 0 15px;
     display: flex;
-    justify-content: space-between;
-    padding: 40px;
-    margin-top: 40px;
-    background-color: #fff;
-}
-
-.section {
-    width: 48%; /* Each section takes up about 50% of the space */
-    text-align: center;
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 10px;
-}
-
-.section img {
-    width: 30%; /* Image width is 30% */
-    height: auto;
-    margin-bottom: 20px; /* Space between image and text */
-}
-
-.section h1 {
-    font-size: 2.5em;
-    margin-bottom: 15px;
-}
-
-.section p {
-    font-size: 1.2em;
-    color: #555;
-}
-
+    flex-wrap: wrap:
+    align-items: center;
+    justufy-content: space-around;
+    gap: 5rem;
+    
 /* Chat Button */
 .chat-button {
     text-align: center;
